--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "predeploy": "npm run build -- --public-url='/goit-js-hw-08-gallery/'",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,10 @@
   "bugs": {
     "url": "https://github.com/an-dia/goit-js-hw-08-gallery/issues"
   },
-  "homepage": "https://github.com/an-dia/goit-js-hw-08-gallery",
+  "homepage": "https://an-dia.github.io/goit-js-hw-08-gallery/",
   "dependencies": {
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "joi": "^17.2.1",
     "shortid": "^2.2.15"
   },
