--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://an-dia.github.io/goit-js-hw-08-gallery",
   "dependencies": {
+    "css": "^3.0.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
     "shortid": "^2.2.15"
