--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "css": "^3.0.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "src": "^1.1.2"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
